# sumologic-python-sdk

./: .bandit.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  mv-monitor-times.py  pyproject.toml  pytest.ini  requirements.txt  search-job.py  setup.py  sumologic.py
.circleci/: config.yml
.github/workflows/: release.yml  runtest.yml
scripts/: README.md  bulk-set.py  create-source.py  export-all-content.py  get-collectors-without-sources.py  get-collectors.py  get-dashboard-data.py  get-metrics.py  get-sources.py  metrics_sample_query.sumoql  mk-monitors-by-host.py  mv-cat.py  mv-monitor-times.py  mv-parse.py  query-test.sumoql  query.sumoql  rm-collectors.py  rm-src-by-cat.py  search-job-messages-trend-antimalware.py  search-job-messages.py  search-job-status-report.py  search-job.py  sumologic-export.py  upload-lookup.py  usage-report.py
scripts/content/: export-content.py
scripts/hierarchies/: ApplicationServiceView.json  README.md  RealUserMonitoring.json  ServiceApplicationView.json  create_hierarchy.py
sumologic/: __init__.py  async.py  backoff.py  simple.py  sumologic.py
test/: test_sumologic.py
